force-app/main/default/objects/sugati__Client_Group__c/fields/sugati__S_CG_Tour_Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_CG_Tour_Balance_Due__c</fullName>
    <formula>IF(TEXT(sugati__S_CG_Booking_Status__c) == &quot;Booking Cancelled&quot;, 
sugati__CG_Total_Cancellation_Amount__c - sugati__CG_Total_Amount_Paid_in_Booking_Currency__c ,
sugati__S_CG_Total_Group_Net_Sell_Price__c - sugati__CG_Total_Amount_Paid_in_Booking_Currency__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tour Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>