force-app/main/default/objects/sugati__Client_Group__c/fields/sugati__S_CG_Tour_Price_Per_Person__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_CG_Tour_Price_Per_Person__c</fullName>
    <description>The tour price per person - based on the room type that this person is staying in.</description>
    <label>Tour Price Per Person</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>