force-app/main/default/objects/sugati__Client_Group__c/fields/sugati__S_CG_Ts_Cs__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_CG_Ts_Cs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Terms &amp; Conditions</label>
    <type>Checkbox</type>
</CustomField>