force-app/main/default/objects/sugati__Client_Group__c/fields/sugati__S_CG_Ts_Cs_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_CG_Ts_Cs_Date__c</fullName>
    <label>Terms &amp; Conditions Date</label>
    <type>Date</type>
</CustomField>